@@ -22,7 +22,7 @@ import org.openrewrite.ExecutionContext;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.test.RewriteTest;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 import static org.openrewrite.kotlin.Assertions.kotlin;
@@ -70,7 +70,7 @@ class KotlinTemplateTest implements RewriteTest {
                       return multiVariable;
                   }
                   maybeAddImport(ObjectMapper.class.getName(), false);
-                  var path = Paths.get(ObjectMapper.class.getProtectionDomain().getCodeSource().getLocation().getPath());
+                  var path = Path.of(ObjectMapper.class.getProtectionDomain().getCodeSource().getLocation().getPath());
                   return KotlinTemplate.builder("val mapper = ObjectMapper()")
                     .parser(KotlinParser.builder().classpath(List.of(path)))
                     .imports(ObjectMapper.class.getName())
